@@ -134,6 +134,8 @@ public abstract class AS2Visitor {
 
 	protected abstract void visit(final ActionPushDuplicate instruction);
 
+	protected abstract void visit(final ActionRandomNumber instruction);
+
 	protected abstract void visit(final ActionSetMember instruction);
 
 	protected abstract void visit(final ActionSetProperty instruction);
@@ -391,6 +393,9 @@ public abstract class AS2Visitor {
 		}
 		else if (instruction instanceof ActionPush) {
 			visit((ActionPush) instruction);
+		}
+		else if (instruction instanceof ActionRandomNumber) {
+			visit((ActionRandomNumber) instruction);
 		}
 		else if (instruction instanceof ActionPushDuplicate) {
 			visit((ActionPushDuplicate) instruction);
