@@ -19,6 +19,8 @@ Version 1.2 (June 5th 2011):
 - Bugfix: ActionScript 2 Play instructions were not previously not in the GUI.
 - Bugfix: ActionScript 2 PreviousFrame instructions were not previously not
           shown in the GUI.
+- Bugfix: ActionScript 2 RandomNumber instructions were not previously not
+          shown in the GUI.
 
 Version 1.1 (May 7th 2011):
 
